# stress_support_chatbot

./: .gitignore  README.md  main.py  pyproject.toml
client/: app.py  config.py
client/components/: chatUI.py  history_download.py
client/utils/: api.py
server/: .env.example  build_rag_index.py  loggger.py  main.py  requirements.txt  test.py  test_fast_path.py
server/middlewares/: exception_handlers.py
server/modules/: llm.py  rag.py
server/routes/: ask_questions.py
